[tool.poetry]
name = "sieve"
version = "0.1.0"
description = ""
authors = ["Cole Rutledge <ColeRutledge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
selenium = "^4.3.0"
lxml = "^4.9.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
rich = "^12.4.4"
pre-commit = "^2.19.0"
mypy = "^0.961"
invoke = "^1.7.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
exclude = "^(.github/|.venv/)"
ignore_missing_imports = "true"
# allow_redefinition = "true"

[tool.isort]
profile = "black"
# number of lines to place between "import ___" and "from ___ import ___"
lines_between_types = "1"
# number of lines to place following all imports
lines_after_imports = "2"

[tool.pytest.ini_options]
addopts = "--cov=sieve/ tests/ --cov-report term-missing --no-cov-on-fail --cov-config=pyproject.toml"

[report] # pytest-cov
exclude_lines = ['if __name__ == "__main__":']
